added all html components (no classes)

--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,46 @@
         </nav>
     </header>
 <body>
-    
+    <section>
+        <h2>Contact</h2>
+        <form>
+            Name:<br>
+            <input type="text" name="John Doe">
+            <br>
+            Email:<br>
+            <input type="text" name="example@email.com">
+            <br>
+            Message:<br>
+            <textarea name="Type your message here" cols="30" rows="10">Type your message here </textarea>
+            <br>
+            <button type="submit">Submit</button>
+            <br>
+        </form>
+        <aside>
+            <h2>Connect with Me</h2>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="https://github.com/dbdoyle182" target="_blank">
+                            <img class="logo" src="C:\Users\dbdoy\BootCamp\Homework\Basic-Portfolio\images\if_github_square_black_107109.png" alt="Github">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.linkedin.com/in/daniel-doyle-b34a90ba/" target="_blank">
+                            <img class="logo" src="C:\Users\dbdoy\BootCamp\Homework\Basic-Portfolio\images\if_linkedin_square_color_107091.png" alt="Linkedin">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://stackoverflow.com/users/story/9262448" target="_blank">
+                            <img class="logo" src="C:\Users\dbdoy\BootCamp\Homework\Basic-Portfolio\images\if_overflow_334695.png" alt="Stack Overflow">
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </aside>
+    </section>   
 </body>
+<footer>
+        Copyright @ Daniel Doyle 2018
+</footer>
 </html>
