--- a/portfolio.html
+++ b/portfolio.html
@@ -17,6 +17,50 @@
         </nav>
     </header>
 <body>
-    
+    <section>
+        <h1>Portfolio</h1>
+        <ul>
+            <li>
+                <img src="C:\Users\dbdoy\BootCamp\Homework\Basic-Portfolio\images\Cat1.jpg" alt="">
+            </li>
+            <li>
+                <img src="C:\Users\dbdoy\BootCamp\Homework\Basic-Portfolio\images\Cat2.jpg" alt="">
+            </li>
+            <li>
+                <img src="C:\Users\dbdoy\BootCamp\Homework\Basic-Portfolio\images\Cat3.jpg" alt="">
+            </li>
+            <li>
+                <img src="C:\Users\dbdoy\BootCamp\Homework\Basic-Portfolio\images\Cat4.jpg" alt="">
+            </li>
+            <li>
+                <img src="C:\Users\dbdoy\BootCamp\Homework\Basic-Portfolio\images\Cat5.jpg" alt="">
+            </li>
+        </ul>
+        <aside>
+            <h2>Connect with Me</h2>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="https://github.com/dbdoyle182" target="_blank">
+                            <img class="logo" src="C:\Users\dbdoy\BootCamp\Homework\Basic-Portfolio\images\if_github_square_black_107109.png" alt="Github">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.linkedin.com/in/daniel-doyle-b34a90ba/" target="_blank">
+                            <img class="logo" src="C:\Users\dbdoy\BootCamp\Homework\Basic-Portfolio\images\if_linkedin_square_color_107091.png" alt="Linkedin">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://stackoverflow.com/users/story/9262448" target="_blank">
+                            <img class="logo" src="C:\Users\dbdoy\BootCamp\Homework\Basic-Portfolio\images\if_overflow_334695.png" alt="Stack Overflow">
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </aside>
+    </section>
 </body>
+<footer>
+        Copyright @ Daniel Doyle 2018
+</footer>
 </html>
