fixed image files

--- a/contact.html
+++ b/contact.html
@@ -38,17 +38,17 @@
                 <ul>
                     <li>
                         <a href="https://github.com/dbdoyle182" target="_blank">
-                            <img class="logo" src="C:\Users\dbdoy\BootCamp\Homework\Basic-Portfolio\images\if_github_square_black_107109.png" alt="Github">
+                            <img class="logo" src="./images/if_github_square_black_107109.png" alt="Github">
                         </a>
                     </li>
                     <li>
                         <a href="https://www.linkedin.com/in/daniel-doyle-b34a90ba/" target="_blank">
-                            <img class="logo" src="C:\Users\dbdoy\BootCamp\Homework\Basic-Portfolio\images\if_linkedin_square_color_107091.png" alt="Linkedin">
+                            <img class="logo" src="./images/if_linkedin_square_color_107091.png" alt="Linkedin">
                         </a>
                     </li>
                     <li>
                         <a href="https://stackoverflow.com/users/story/9262448" target="_blank">
-                            <img class="logo" src="C:\Users\dbdoy\BootCamp\Homework\Basic-Portfolio\images\if_overflow_334695.png" alt="Stack Overflow">
+                            <img class="logo" src="./images/if_overflow_334695.png" alt="Stack Overflow">
                         </a>
                     </li>
                 </ul>
