--- a/portfolio.html
+++ b/portfolio.html
@@ -21,19 +21,19 @@
         <h1>Portfolio</h1>
         <ul>
             <li>
-                <img src="C:\Users\dbdoy\BootCamp\Homework\Basic-Portfolio\images\Cat1.jpg" alt="">
+                <img src="./images/Cat1.jpg" alt="">
             </li>
             <li>
-                <img src="C:\Users\dbdoy\BootCamp\Homework\Basic-Portfolio\images\Cat2.jpg" alt="">
+                <img src="./images/Cat2.jpg" alt="">
             </li>
             <li>
-                <img src="C:\Users\dbdoy\BootCamp\Homework\Basic-Portfolio\images\Cat3.jpg" alt="">
+                <img src="./images/Cat3.jpg" alt="">
             </li>
             <li>
-                <img src="C:\Users\dbdoy\BootCamp\Homework\Basic-Portfolio\images\Cat4.jpg" alt="">
+                <img src="./images/Cat4.jpg" alt="">
             </li>
             <li>
-                <img src="C:\Users\dbdoy\BootCamp\Homework\Basic-Portfolio\images\Cat5.jpg" alt="">
+                <img src="./images/Cat5.jpg" alt="">
             </li>
         </ul>
         <aside>
@@ -42,17 +42,17 @@
                 <ul>
                     <li>
                         <a href="https://github.com/dbdoyle182" target="_blank">
-                            <img class="logo" src="C:\Users\dbdoy\BootCamp\Homework\Basic-Portfolio\images\if_github_square_black_107109.png" alt="Github">
+                            <img class="logo" src="./images/if_github_square_black_107109.png" alt="Github">
                         </a>
                     </li>
                     <li>
                         <a href="https://www.linkedin.com/in/daniel-doyle-b34a90ba/" target="_blank">
-                            <img class="logo" src="C:\Users\dbdoy\BootCamp\Homework\Basic-Portfolio\images\if_linkedin_square_color_107091.png" alt="Linkedin">
+                            <img class="logo" src="./images/if_linkedin_square_color_107091.png" alt="Linkedin">
                         </a>
                     </li>
                     <li>
                         <a href="https://stackoverflow.com/users/story/9262448" target="_blank">
-                            <img class="logo" src="C:\Users\dbdoy\BootCamp\Homework\Basic-Portfolio\images\if_overflow_334695.png" alt="Stack Overflow">
+                            <img class="logo" src="./images/if_overflow_334695.png" alt="Stack Overflow">
                         </a>
                     </li>
                 </ul>
