--- a/portfolio.html
+++ b/portfolio.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="./assets/style.css">
 </head>
-<header>
+<div class="page">
+    <header>
         <h1>Daniel Doyle</h1>
         <nav>
             <ul>
@@ -16,50 +18,51 @@
             </ul>
         </nav>
     </header>
-<body>
-    <section>
-        <h1>Portfolio</h1>
-        <ul>
-            <li>
-                <img src="./images/Cat1.jpg" alt="">
-            </li>
-            <li>
-                <img src="./images/Cat2.jpg" alt="">
-            </li>
-            <li>
-                <img src="./images/Cat3.jpg" alt="">
-            </li>
-            <li>
-                <img src="./images/Cat4.jpg" alt="">
-            </li>
-            <li>
-                <img src="./images/Cat5.jpg" alt="">
-            </li>
-        </ul>
-        <aside>
-            <h2>Connect with Me</h2>
-            <nav>
-                <ul>
-                    <li>
-                        <a href="https://github.com/dbdoyle182" target="_blank">
-                            <img class="logo" src="./images/if_github_square_black_107109.png" alt="Github">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.linkedin.com/in/daniel-doyle-b34a90ba/" target="_blank">
-                            <img class="logo" src="./images/if_linkedin_square_color_107091.png" alt="Linkedin">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://stackoverflow.com/users/story/9262448" target="_blank">
-                            <img class="logo" src="./images/if_overflow_334695.png" alt="Stack Overflow">
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-        </aside>
-    </section>
-</body>
+    <body>
+        <section>
+            <h1>Portfolio</h1>
+            <ul>
+                <li>
+                    <img src="./images/Cat1.jpg" alt="">
+                </li>
+                <li>
+                    <img src="./images/Cat2.jpg" alt="">
+                </li>
+                <li>
+                    <img src="./images/Cat3.jpg" alt="">
+                </li>
+                <li>
+                    <img src="./images/Cat4.jpg" alt="">
+                </li>
+                <li>
+                    <img src="./images/Cat5.jpg" alt="">
+                </li>
+            </ul>
+            <aside>
+                <h2>Connect with Me</h2>
+                <nav>
+                    <ul>
+                        <li>
+                            <a href="https://github.com/dbdoyle182" target="_blank">
+                                <img class="logo" src="./images/if_github_square_black_107109.png" alt="Github">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.linkedin.com/in/daniel-doyle-b34a90ba/" target="_blank">
+                                <img class="logo" src="./images/if_linkedin_square_color_107091.png" alt="Linkedin">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://stackoverflow.com/users/story/9262448" target="_blank">
+                                <img class="logo" src="./images/if_overflow_334695.png" alt="Stack Overflow">
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </aside>
+        </section>
+    </body>
+</div>
 <footer>
         Copyright @ Daniel Doyle 2018
 </footer>
