--- a/contact.html
+++ b/contact.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="./assets/style.css">
 </head>
 <div class="page">
-    <header>
-        <h1>Daniel Doyle</h1>
-        <nav>
+    <header class="clearfix">
+        <h1 class="name">Daniel Doyle</h1>
+        <nav class="sitenav">
             <ul>
                 <li><a href="index.html">About</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
